--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- Usar el enlace directo al icono -->
     <link type="image/png" sizes="32x32" rel="icon" href="https://img.icons8.com/windows/32/dev.png">
-    <title>Gerardo Leivas Dev</title>
+    <title>Haul Mawr Instituto</title>
   </head>
   <body>
     <div id="root"></div>
