--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Usar el enlace directo al icono -->
-    <link type="image/png" sizes="32x32" rel="icon" href="https://img.icons8.com/windows/32/dev.png">
+    <link type="image/png" sizes="32x32" rel="icon" href="./src/assets/images/tree.png">
     <title>Haul Mawr Instituto</title>
   </head>
   <body>
